feat: add CLABE instructions to thank you page

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,7 @@ NEXT_PUBLIC_WHATSAPP=
 NEXT_PUBLIC_FACEBOOK=
 NEXT_PUBLIC_INSTAGRAM=
 NEXT_PUBLIC_ABOUT_US=
+NEXT_PUBLIC_BANK_ACCOUNT_HOLDER_NAME="John Doe"
+NEXT_PUBLIC_BANK_ACCOUNT_CLABE=012345678901234567
+NEXT_PUBLIC_BANK_NAME="Example Bank"
+
